# JCode

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  test-config-dir.sh  test-proxy.mjs
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  batch_test.rs  config_dir.rs  keychain.rs  launch.rs  mod.rs  openai_adapter.rs  platform.rs  proxy.rs  secret_store.rs  settings.rs  stats.rs  terminal.rs
src-tauri/src/models/: mod.rs  platform.rs  proxy.rs
src/components/: DirectoryPicker.tsx  PageActions.tsx  PageFooter.tsx  PlatformCard.tsx  TitleBar.tsx  Toast.tsx
src/components/stats/: ModelsChart.tsx  StatsHeatmap.tsx
src/components/ui/: context-menu.tsx  dialog.tsx  input.tsx  switch.tsx
src/hooks/: useDragDrop.ts
src/lib/: presets.ts
src/pages/: BatchTest.tsx  Home.tsx  PlatformEdit.tsx  PlatformList.tsx  Proxy.tsx  Settings.tsx  Stats.tsx
src/store/: platformStore.ts  proxyStore.ts  settingsStore.ts  statsStore.ts  updateStore.ts
src/types/: platform.ts  proxy.ts  stats.ts
